--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-streamlit==1.31.1
+streamlit
 python-dotenv
-langchain==0.1.21
-langgraph==0.0.38
+langchain
+langgraph
 arxiv
-pydantic==2.6.4
+pydantic
 tiktoken
-PyMuPDF==1.25.5
-pinecone-client==3.0.2
-sentence-transformers==2.6.1
-openai==1.17.0
-google-generativeai==0.8.5
+PyMuPDF
+pinecone-client
+sentence-transformers
+openai
+google-generativeai
 duckduckgo-search
 yfinance
 aiohttp
