--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,8 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
 
       - name: 🔐 Authenticate with Fly.io
-        run: flyctl auth token "${{ secrets.FLY_API_TOKEN }}"
+        run: flyctl auth login --access-token "${{ secrets.FLY_API_TOKEN }}"
+      
 
       - name: 🚀 Deploy to Fly.io
         run: flyctl deploy --remote-only --dockerfile ./Dockerfile
