🚀 trigger CI/CD pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,5 @@ jobs:
         run: flyctl auth login --access-token "${{ secrets.FLY_API_TOKEN }}"
       
       - name: 🚀 Deploy to Fly.io
-        run: flyctl deploy --remote-only --dockerfile ./Dockerfile
+        run: flyctl deploy --remote-only --dockerfile ./Dockerfile -a multi-ai-chatbot
+      
