--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ langgraph>=0.0.40
 # Vector Store + Embeddings
 pinecone>=4.0.0
 sentence-transformers
+transformers>=4.41.0  # Needed for HuggingFaceEmbeddings + nomic models
+accelerate            # Required by some HuggingFace models
+torch>=2.2.2          # Backend for most transformer models
 
 # LLM Providers
 openai>=1.14.3
