--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ sentence-transformers
 transformers>=4.41.0  # Needed for HuggingFaceEmbeddings + nomic models
 accelerate            # Required by some HuggingFace models
 torch>=2.2.2          # Backend for most transformer models
+einops>=0.7.0
 
 # LLM Providers
 openai>=1.14.3
