--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ aiohttp
 tiktoken
 pydantic>=2.6.4
 
-# LangChain ecosystem (split modules post v0.1)
+# LangChain ecosystem
 langchain>=0.1.16
 langchain-core>=0.1.40
 langchain-community>=0.0.33
@@ -16,22 +16,22 @@ langgraph>=0.0.40
 
 # Vector Store + Embeddings
 pinecone>=4.0.0
-sentence-transformers
-transformers>=4.41.0  # Needed for HuggingFaceEmbeddings + nomic models
-accelerate            # Required by some HuggingFace models
-torch>=2.2.2          # Backend for most transformer models
-einops>=0.7.0
-
-# LLM Providers
 openai>=1.14.3
-google-generativeai>=0.4.1
+langchain-openai>=0.1.6  # Required for OpenAIEmbeddings
 
 # Tools
+PyMuPDF
 arxiv
 duckduckgo-search
 yfinance
-PyMuPDF
 
-# Testing & Linting (Optional for CI/CD)
+# Optional - for HuggingFace fallback or testing (not used with OpenAIEmbeddings)
+sentence-transformers
+transformers>=4.41.0
+torch>=2.2.2
+accelerate
+einops>=0.7.0
+
+# Testing & Linting
 pytest
 flake8
