--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,3 +3,7 @@ maxUploadSize = 200
 port = 8501
 enableCORS = false
 headless = true
+
+[browser]
+serverAddress = "0.0.0.0"
+gatherUsageStats = false
