--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,10 @@ pgvector
 sqlalchemy
 
 # --- Optional Transformers (fallback embedding & tools) ---
-sentence-transformers
+sentence-transformers>=2.7.0  # UPDATED: Ensure CLIP support
 transformers>=4.41.0
 torch>=2.2.2
+faiss-cpu>=1.8.0 
 accelerate
 einops>=0.7.0
 
@@ -36,6 +37,11 @@ pypdf
 duckduckgo-search
 yfinance
 
+# --- Image Processing ---  # NEW SECTION
+pillow>=10.0.0  # Required for image operations
+opencv-python-headless>=4.8.0  # NEW: Helpful for advanced image processing
+imageio>=2.31.1  # NEW: Additional image support
+
 # --- Agent Frameworks ---
 phidata
 groq
@@ -43,10 +49,6 @@ agno
 phi
 tantivy>=0.21.0
 lancedb>=0.4.5
-
-# Optional for local image/text extraction (fallback)
-pillow
-pdfminer.six
 
 # --- Server / API ---
 fastapi
