--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,8 @@ jobs:
       - name: 📦 Install Python deps
         run: |
           pip install --upgrade pip
-          pip install -r requirements.txt flake8 pytest
+          pip install -r docker/requirements.txt
+          pip install flake8 pytest
 
       - name: ✅ Lint
         run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
