ci: add unified CI/CD for PDF & GPU image‐search services

--- a/fly.toml
+++ b/fly.toml
@@ -6,7 +6,7 @@ primary_region = 'ams'
   auto_rollback = true
 
 [build]
-  dockerfile = './Dockerfile'
+  dockerfile = "./docker/Dockerfile.cpu"
 
 [env]
   PORT = '8501'
