--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ jobs:
   build-test-and-deploy:
     runs-on: ubuntu-latest
     env:
+      # Injected from GitHub Secrets
       GHCR_USER:        ${{ secrets.GHCR_USER }}
       GHCR_TOKEN:       ${{ secrets.GHCR_TOKEN }}
       RUNPOD_API_KEY:   ${{ secrets.RUNPOD_API_KEY }}
@@ -18,14 +19,15 @@ jobs:
       FAISS_INDEX_PATH: ${{ secrets.FAISS_INDEX_PATH }}
 
     steps:
-      - uses: actions/checkout@v3
+      - name: 📥 Checkout
+        uses: actions/checkout@v3
 
       - name: 🐍 Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: 📦 Install Python deps
+      - name: 📦 Install Python deps for tests
         run: |
           pip install --upgrade pip
           pip install -r docker/requirements.txt
@@ -37,7 +39,8 @@ jobs:
       - name: 🧪 Test
         run: PYTHONPATH=src pytest src/langgraphagenticai/tests
 
-      # ────────────────────────────────────────────────
+      # ───────────────────────────────────────────────────
+      # Fly.io deploy of CPU-based PDF service
       - name: ⚙️ Install Fly CLI
         run: |
           curl -L https://fly.io/install.sh | sh
@@ -46,7 +49,7 @@ jobs:
       - name: 🔐 Fly Login
         run: flyctl auth login --access-token "${{ secrets.FLY_API_TOKEN }}"
 
-      - name: 🚀 Deploy PDF service to Fly.io
+      - name: 🚀 Deploy PDF service
         run: |
           retry=3; count=0
           until flyctl deploy . \
@@ -63,61 +66,25 @@ jobs:
             sleep 10
           done
 
-      - name: 🎯 Show Fly.io URL
-        run: echo "✅ PDF service live at https://multi-ai-chatbot.fly.dev"
+      - name: 🎯 PDF Service URL
+        run: echo "https://multi-ai-chatbot.fly.dev"
 
-      # ────────────────────────────────────────────────
-      - name: 🐳 Setup Buildx
+      # ───────────────────────────────────────────────────
+      # GPU image-search via your deploy_gpu.sh
+      - name: 🐳 Setup Docker Buildx (needed inside deploy_gpu.sh)
         uses: docker/setup-buildx-action@v2
 
-      - name: 🔐 Login to GHCR
+      - name: 🔐 Docker login for GHCR (needed for deploy_gpu.sh)
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ env.GHCR_USER }}
           password: ${{ env.GHCR_TOKEN }}
 
-      - name: 📦 Build & push GPU image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: docker/Dockerfile.gpu
-          push: true
-          tags: ghcr.io/${{ env.GHCR_USER }}/faiss-gpu-api:latest
-
-      - name: 🛠 Install jq
+      - name: 🛠 Install jq (needed for deploy_gpu.sh parsing)
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: 🚀 Deploy GPU API on RunPod
+      - name: 🚀 Deploy GPU Image-Search Service
         run: |
-          REST="https://rest.runpod.io/v1"
-          IMAGE="ghcr.io/${GHCR_USER,,}/faiss-gpu-api:latest"
-
-          STATUS=$(curl -s -H "Authorization: Bearer ${RUNPOD_API_KEY}" \
-            "${REST}/pods/${RUNPOD_POD_ID}" | jq -r .desiredStatus)
-          if [[ "$STATUS" != "RUNNING" ]]; then
-            echo "⚡ Pod is $STATUS — starting…"
-            curl -s -X POST \
-              -H "Authorization: Bearer ${RUNPOD_API_KEY}" \
-              "${REST}/pods/${RUNPOD_POD_ID}/start" -d '{}'
-            sleep 30
-          fi
-
-          curl -s -X POST \
-            -H "Authorization: Bearer ${RUNPOD_API_KEY}" \
-            -H "Content-Type: application/json" \
-            "${REST}/pods/${RUNPOD_POD_ID}/run" \
-            -d "$(jq -n \
-                --arg image "$IMAGE" \
-                --arg token "$API_AUTH_TOKEN" \
-                --arg path  "$FAISS_INDEX_PATH" \
-               '{
-                  image: $image,
-                  env: {
-                    API_AUTH_TOKEN: $token,
-                    FAISS_INDEX_PATH: $path
-                  },
-                  ports: ["8000/http"]
-                }')"
-
-          echo "✅ GPU API live at ${GPU_API_URL}/search?top_k=3"
+          chmod +x scripts/deploy_gpu.sh
+          ./scripts/deploy_gpu.sh
