--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -10,9 +10,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     rm -rf /var/lib/apt/lists/*
     
 # ---- Python Dependencies ----
-COPY requirements.txt .
+COPY ./docker/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r /app/requirements.txt
     
 # ---- App Code ----
 COPY ./src /app/src
