--- a/.github/workflows/deploy_gpu.yml
+++ b/.github/workflows/deploy_gpu.yml
@@ -21,6 +21,9 @@ jobs:
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: 🐍 Install RunPod SDK
+        run: pip install runpod
+      
       - name: 🔐 Log in to GHCR
         uses: docker/login-action@v2
         with:
