--- a/.github/workflows/deploy_cpu.yml
+++ b/.github/workflows/deploy_cpu.yml
@@ -24,10 +24,12 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r docker/requirements.txt
-          pip install flake8 pytest
+          pip install flake8 pytest types-requests  # Added types-requests for better type checking
 
       - name: ✅ Lint
-        run: flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        run: |
+          flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+          mypy src/ --ignore-missing-imports  # Added mypy for additional type checking
 
       - name: 🧪 Test
         run: PYTHONPATH=src pytest src/langgraphagenticai/tests
