--- a/.github/workflows/deploy_gpu.yml
+++ b/.github/workflows/deploy_gpu.yml
@@ -25,7 +25,10 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: 🐍 Install RunPod SDK
-        run: pip install runpod
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+          pip install runpod
 
       - name: 🔐 Log in to GHCR
         uses: docker/login-action@v2
@@ -35,6 +38,12 @@ jobs:
           password: ${{ env.GHCR_TOKEN }}
 
       - name: 🚀 Build, push & deploy
+        env: 
+          GHCR_USER: ${{ secrets.GHCR_USER }}
+          GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+          API_AUTH_TOKEN: ${{ secrets.API_AUTH_TOKEN }}
+          FAISS_INDEX_PATH: ${{ secrets.FAISS_INDEX_PATH }}
         run: |
           chmod +x scripts/deploy_gpu.sh
           ./scripts/deploy_gpu.sh
