--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -18,7 +18,7 @@ ENV PIP_ROOT_USER_ACTION=ignore \
 
 # ──── PYTHON DEPENDENCIES ───────────────────────────────
 COPY docker/requirements.gpu.txt /app/requirements.gpu.txt
-RUN pip install --no-cache-dir --upgrade pip wheel setuptools && \
+RUN pip install --no-cache-dir --upgrade pip wheel setuptools numpy && \
     pip install --no-cache-dir --use-pep517 -r requirements.gpu.txt
 
 # ──── APP CODE ──────────────────────────────────────────
