CI/CD for PDF & GPU image‐search services

--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -1,7 +1,7 @@
 # ──── BASE CUDA IMAGE ───────────────────────────────────
 FROM nvidia/cuda:11.8.0-runtime-ubuntu22.04
-
 ENV DEBIAN_FRONTEND=noninteractive
+
 # ──── SYSTEM SETUP ──────────────────────────────────────
 WORKDIR /app
 RUN apt-get update && \
@@ -9,22 +9,26 @@ RUN apt-get update && \
       python3.10 \
       python3-pip \
       libopenblas-dev \
-      apt-utils \
-      cron && \
-    rm -rf /var/lib/apt/lists/*
+      cron \
+    && rm -rf /var/lib/apt/lists/*
 
+# Disable pip warnings in container
 ENV PIP_ROOT_USER_ACTION=ignore \
     PIP_DISABLE_PIP_VERSION_CHECK=1
 
 # ──── PYTHON DEPENDENCIES ───────────────────────────────
-COPY docker/requirements.gpu.txt /app/requirements.gpu.txt
-RUN pip install --no-cache-dir --upgrade pip wheel setuptools numpy && \
-    pip install --no-cache-dir --use-pep517 -r requirements.gpu.txt
+# 1) Copy only your GPU requirements file so we can leverage layer caching
+COPY docker/requirements.gpu.txt .
+
+# 2) Upgrade pip & setuptools, pin numpy (matches faiss-gpu build), then install everything else
+RUN pip install --no-cache-dir --upgrade pip wheel setuptools \
+    && pip install --no-cache-dir numpy==1.24.3 \
+    && pip install --no-cache-dir --use-pep517 -r requirements.gpu.txt
 
 # ──── APP CODE ──────────────────────────────────────────
-COPY src/ /app/src
-COPY docker/auto_terminate.sh /app/auto_terminate.sh
-RUN chmod +x /app/auto_terminate.sh
+COPY src/ src/
+COPY docker/auto_terminate.sh auto_terminate.sh
+RUN chmod +x auto_terminate.sh
 
 # ──── FAISS INDEX PRELOAD ───────────────────────────────
 RUN mkdir -p /data && chmod 777 /data
@@ -32,4 +36,4 @@ ENV FAISS_INDEX_PATH=/data/vector.index
 
 # ──── API SERVER ────────────────────────────────────────
 EXPOSE 8000
-CMD ["sh", "-c", "/app/auto_terminate.sh & uvicorn src.api.gpu_server:app --host 0.0.0.0 --port 8000"]
+CMD ["sh", "-c", "./auto_terminate.sh & uvicorn src.api.gpu_server:app --host 0.0.0.0 --port 8000"]
