--- a/docker/requirements.gpu.txt
+++ b/docker/requirements.gpu.txt
@@ -25,6 +25,7 @@ sqlalchemy
 # --- Optional Transformers (fallback embedding & tools) ---
 sentence-transformers>=2.7.0  # UPDATED: Ensure CLIP support
 transformers>=4.41.0
+numpy<2.0
 faiss-gpu==1.7.2
 torch==2.2.2 --extra-index-url https://download.pytorch.org/whl/cu118
 accelerate
