--- a/.github/workflows/deploy_cpu.yml
+++ b/.github/workflows/deploy_cpu.yml
@@ -6,61 +6,72 @@ on:
   workflow_dispatch:
 
 env:
-  PDF_SERVICE_PORT: 8001
-  SERVICE_TYPE: "pdf"
+  PORT: 8001
+  FLY_APP: "pdf"
 
 jobs:
-  build-lint-test:
+  ci:
+    name: 🧪 Lint & Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: 📥 Checkout
+        uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python
+      - name: 🐍 Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       - name: 📦 Install deps
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
+          pip install flake8 pytest
           pip install -r docker/requirements.txt
-          pip install flake8 pytest types-requests  
 
       - name: ✅ Lint
-        run: |
-          flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        run: flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
 
       - name: 🧪 Test
         run: PYTHONPATH=src pytest src/langgraphagenticai/tests
 
-  deploy-fly:
-    needs: build-lint-test
+  deploy:
+    name: 🚀 Deploy to Fly.io
+    needs: ci
     runs-on: ubuntu-latest
     env:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-    steps:
-      - uses: actions/checkout@v3
+      PINECONE_API_KEY:   ${{ secrets.PINECONE_API_KEY }}
+      PINECONE_INDEX_NAME: ${{ secrets.PINECONE_INDEX_NAME }}
+      OPENAI_API_KEY:     ${{ secrets.OPENAI_API_KEY }}
+      API_AUTH_TOKEN:     ${{ secrets.API_AUTH_TOKEN }}
+      PORT:               ${{ env.PORT }}
+      FLY_APP:            ${{ env.FLY_APP }}
 
-      - name: ⚙️ Upgrade Fly CLI (latest stable)
+    steps:
+      - name: 📥 Checkout
+        uses: actions/checkout@v3
+
+      - name: ⚙️ Install Flyctl
         run: |
           curl -L https://fly.io/install.sh | sh
           echo "$HOME/.fly/bin" >> $GITHUB_PATH
 
-      - name: 🔐 Authenticate with Fly.io
-        run: flyctl auth login --access-token "${{ secrets.FLY_API_TOKEN }}"
+      - name: 🔐 Fly Login
+        run: flyctl auth login --access-token "${{ env.FLY_API_TOKEN }}"
 
-      - name: 🚀 Deploy PDF service
+      - name: 🚀 Deploy
         run: |
-          flyctl deploy . \
-            --remote-only \
+          flyctl deploy --remote-only \
+            --app $FLY_APP \
             --dockerfile docker/Dockerfile.cpu \
             --strategy immediate \
-            -a multi-ai-chatbot \
-            --env SERVICE_TYPE=pdf \
-            --env PORT=$PDF_SERVICE_PORT \
-            --env FAISS_INDEX_PATH=/data/pdf_index
+            --env PORT=$PORT \
+            --env PINECONE_API_KEY=$PINECONE_API_KEY \
+            --env PINECONE_INDEX_NAME=$PINECONE_INDEX_NAME \
+            --env OPENAI_API_KEY=$OPENAI_API_KEY \
+            --env API_AUTH_TOKEN=$API_AUTH_TOKEN
 
-      - name: 🎯 Store Service URL
+      - name: 🎯 Output URL
         run: |
-          echo "PDF_SERVICE_URL=https://multi-ai-chatbot.fly.dev" >> $GITHUB_ENV
-          echo "✅ PDF service live at $PDF_SERVICE_URL"
+          HOSTNAME=$(flyctl info --app $FLY_APP --json | jq -r .Status.Hostname)
+          echo "PDF service live at https://$HOSTNAME"  
