--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -6,12 +6,12 @@ WORKDIR /app
     
 # ---- System Dependencies ----
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential gcc git curl && \
+    build-essential gcc git curl libjpeg-dev zlib1g-dev && \
     rm -rf /var/lib/apt/lists/*
     
 # ---- Python Dependencies ----
 COPY ./docker/requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir --upgrade pip && \
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
     pip install --no-cache-dir -r /app/requirements.txt
     
 # ---- App Code ----
