--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -1,7 +1,7 @@
 # ──── BASE CUDA IMAGE ───────────────────────────────────
 FROM nvidia/cuda:11.8.0-runtime-ubuntu22.04
 
-# avoid interactive prompts
+# ──── avoid any interactive prompts ──────────────────────
 ENV DEBIAN_FRONTEND=noninteractive
 
 # ──── WORKDIR ───────────────────────────────────────────
@@ -10,29 +10,32 @@ WORKDIR /app
 # ──── SYSTEM PACKAGES ───────────────────────────────────
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
-      python3.10 python3-pip \
-      libopenblas-dev apt-utils cron \
-      curl jq \
+      python3.10 \
+      python3-pip \
+      libopenblas-dev \
+      libjpeg-dev \
+      zlib1g-dev \
+      cron \
+      curl \
+      jq \
  && rm -rf /var/lib/apt/lists/*
 
-# speed up pip
+# ──── pip performance tweaks ─────────────────────────────
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1 \
     PIP_ROOT_USER_ACTION=ignore
 
 # ──── PYTHON DEPENDENCIES ───────────────────────────────
-COPY docker/requirements.gpu.txt /app/requirements.gpu.txt
-
-# pin numpy<2 so pre-built FAISS wheels load without the "multiarray" error
+COPY ./docker/requirements.gpu.txt /app/requirements.gpu.txt
 RUN pip install --no-cache-dir --upgrade pip wheel setuptools "numpy<2" \
  && pip install --no-cache-dir --use-pep517 -r requirements.gpu.txt
 
 # ──── APP CODE + AUTO-TERMINATOR ────────────────────────
-COPY src/ /app/src
-COPY docker/auto_terminate.sh /app/auto_terminate.sh
+COPY ./src/ /app/src
+COPY ./docker/auto_terminate.sh /app/auto_terminate.sh
 RUN chmod +x /app/auto_terminate.sh
 
-# ──── DATA VOLUMES ─────────────────────────────────────
-# create both the vector index folder and the static images folder
+# ──── DATA VOLUMES ──────────────────────────────────────
+# Create FAISS index folder & static images folder
 RUN mkdir -p /data/images \
  && chmod -R 777 /data
 
@@ -42,6 +45,5 @@ ENV FAISS_INDEX_PATH=/data/vector.index \
 # ──── PORT + ENTRYPOINT ─────────────────────────────────
 EXPOSE 8000
 
-# run auto-terminate in background, then start uvicorn
 ENTRYPOINT ["sh","-c"]
 CMD ["/app/auto_terminate.sh & exec uvicorn src.api.gpu_server:app --host 0.0.0.0 --port 8000"]
